--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #header {
-        background-image:;
+        background-image: url (http://fc07.deviantart.net/fs45/f/2009/061/c/8/I__m_so_happy____by_Hanyou_at_Heart.jpg);
 }
 #base {
 
