/ ‘.idea/workspace.xml’ / ‘style.css’

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #header {
-        background-color: ;
+        background-color: mediumspringgreen;
         width: 90%;
         height: 1700px;
 }
