/ ‘.idea/workspace.xml’ / ‘style.css’

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 #header {
         background-color: mediumspringgreen;
-        width: 90%;
-        height: 1700px;
+        width: 70%;
+        height: 100px;
+        margin: auto ;
+
 }
 #base {
 
