--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 #header {
-        background-color: mediumspringgreen;
         width: 70%;
-        height: 100px;
+        height: 200px;
         margin: auto ;
+        background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#000));
 
 }
 #base {
