--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
         width: 60%;
         height: 200px;
         margin: auto ;
-        background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#000));
+        background: -webkit-gradient(linear, left top, left bottom, from(#aaa), to(#000));
 
 
 }
