--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
        height: 200px;
        margin: auto ;
        background: -webkit-gradient(linear, left top, left bottom, from(#45b987), to(#123697));
-
+       border-radius: 50px
 }
 #base {
 
