/ ‘.idea/workspace.xml’ / ‘style.css’

--- a/style.css
+++ b/style.css
@@ -17,6 +17,6 @@ footer {
 .menu {
     display: inline-block;
     border; 5px solid blue;
-    width:10%;
-    hight: 20px''
+    width: 50px;
+    hight: 20px;
 }
