--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
 footer {
 
 }
-nav {
+a {
     text-decoration: none;
+    color: white;
   }
+nav {
+    display: inline-block;
+    margin: auto;
+}
