--- a/style.css
+++ b/style.css
@@ -18,9 +18,12 @@ a {
     text-decoration: none;
     color: white;
     display: inline-block;
+    margin: 150px 80px 10px 80px;
+    border: 1px solid blue;
+    padding: 10px;
+    border-radius: 20px;
+    background-color: steelblue;
+
+
 
   }
-nav {
-    display: inline-block;
-    margin: auto;
-}
