--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 #header {
        width: 60%;
        height: 200px;
-       margin: auto ;
+       margin: auto;
+       margin-top: 10px;
        background: -webkit-gradient(linear, left top, left bottom, from(#45b987), to(#123697));
        border-radius: 50px
 }
