--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 #header {
        width: 60%;
        height: 200px;
-       margin: auto;
-       margin-top: 10px;
+       margin: 10px auto;
        background: -webkit-gradient(linear, left top, left bottom, from(#45b987), to(#123697));
        border-radius: 50px
 }
