--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ footer {
     width: 100%
     height: 50px;
     background-color: mediumpurple;
+    border: 1px solid black;
 }
 a {
     text-decoration: none;
