--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
     width: 100%;
     height: 50px;
     background-color: mediumpurple;
-    border: 1px solid #5d4c8f;
-    float: bottom;
+    border: 1px none;
+    ;
 }
 a {
     text-decoration: none;
