/ ‘.idea/workspace.xml’ / ‘index.html’ / ‘style.css’

--- a/style.css
+++ b/style.css
@@ -39,3 +39,4 @@ a {
      color: white;
      padding-top: 15px;
 }
+        /!*http://www.webdesignerwall.com/demo/css3-dropdown-menu/css-gradient-dropdown.html#  pasiziuret sita!*/
