--- a/css/main.css
+++ b/css/main.css
@@ -96,8 +96,13 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-
+ body {
+     background: #cccccc;
+ }
+.container {
+    width: 960px;
+    background: rgba (255,255,255,0.5);
+}
 
 
 
