--- a/css/main.css
+++ b/css/main.css
@@ -98,22 +98,22 @@ textarea {
    ========================================================================== */
  body {
      /* IE10 Consumer Preview */
-     background-image: -ms-radial-gradient(center, circle farthest-corner, #CCCCCC 0%, #8572BA 100%);
+     background-image: -ms-radial-gradient(center, circle farthest-corner, #1ABC9C 0%, #16A085 100%);
 
      /* Mozilla Firefox */
-     background-image: -moz-radial-gradient(center, circle farthest-corner, #CCCCCC 0%, #8572BA 100%);
+     background-image: -moz-radial-gradient(center, circle farthest-corner, #1ABC9C 0%, #16A085 100%);
 
      /* Opera */
-     background-image: -o-radial-gradient(center, circle farthest-corner, #CCCCCC 0%, #8572BA 100%);
+     background-image: -o-radial-gradient(center, circle farthest-corner, #1ABC9C 0%, #16A085 100%);
 
      /* Webkit (Safari/Chrome 10) */
-     background-image: -webkit-gradient(radial, center center, 0, center center, 506, color-stop(0, #CCCCCC), color-stop(1, #8572BA));
+     background-image: -webkit-gradient(radial, center center, 0, center center, 506, color-stop(0, #1ABC9C), color-stop(1, #16A085));
 
      /* Webkit (Chrome 11+) */
-     background-image: -webkit-radial-gradient(center, circle farthest-corner, #CCCCCC 0%, #8572BA 100%);
+     background-image: -webkit-radial-gradient(center, circle farthest-corner, #1ABC9C 0%, #16A085 100%);
 
      /* W3C Markup, IE10 Release Preview */
-     background-image: radial-gradient(circle farthest-corner at center, #CCCCCC 0%, #8572BA 100%);
+     background-image: radial-gradient(circle farthest-corner at center, #1ABC9C 0%, #16A085 100%);
  }
 .container {
     width: 960px;
