--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,74 @@ textarea {
 
 
 }
+@font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.eot?64093725');
+    src: url('../font/fontello.eot?64093725#iefix') format('embedded-opentype'),
+    url('../font/fontello.woff?64093725') format('woff'),
+    url('../font/fontello.ttf?64093725') format('truetype'),
+    url('../font/fontello.svg?64093725#fontello') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.svg?64093725#fontello') format('svg');
+  }
+}
+*/
 
+[class^="icon-"]:before, [class*=" icon-"]:before {
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .2em;
+    text-align: center;
+    /* opacity: .8; */
+
+    /* For safety - reset parent styles, that can break glyph codes*/
+    font-variant: normal;
+    text-transform: none;
+
+    /* fix buttons height, for twitter bootstrap */
+    line-height: 1em;
+
+    /* Animation center compensation - margins should be symmetric */
+    /* remove if not needed */
+    margin-left: .2em;
+
+    /* you can be more comfortable with increased icons size */
+    /* font-size: 120%; */
+
+    /* Uncomment for 3D effect */
+    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-home:before { content: '\e809'; } /* '' */
+.icon-th-list:before { content: '\e806'; } /* '' */
+.icon-th:before { content: '\e805'; } /* '' */
+.icon-attention:before { content: '\e80c'; } /* '' */
+.icon-ok:before { content: '\e807'; } /* '' */
+.icon-cancel:before { content: '\e808'; } /* '' */
+.icon-th-large:before { content: '\e804'; } /* '' */
+.icon-list-bullet:before { content: '\e812'; } /* '' */
+.icon-list-numbered:before { content: '\e811'; } /* '' */
+.icon-angle-left:before { content: '\e80d'; } /* '' */
+.icon-angle-right:before { content: '\e80e'; } /* '' */
+.icon-angle-up:before { content: '\e80f'; } /* '' */
+.icon-angle-down:before { content: '\e810'; } /* '' */
+.icon-info:before { content: '\e80a'; } /* '' */
+.icon-attention-alt:before { content: '\e80b'; } /* '' */
+.icon-user:before { content: '\e803'; } /* '' */
 
 
 
