--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,8 @@ header .container {
     border-bottom: 1px solid #b3d4fc;
     background: url("http://www.customtoronto.ca/img/headbg.gif");
     border-radius: 20px;
+    border:2px dashed #ffffff;
+    box-shadow: 0 0 0 8px #ff0030;
 
 
 }
