--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ header .container {
     background: url("http://www.customtoronto.ca/img/headbg.gif");
     border-radius: 20px;
     border:2px dashed #ffffff;
-    box-shadow: 0 0 0 8px #ff0030;
+    box-shadow: 0 0 0 8px #908da6;
 
 
 }
