--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,7 @@ header .container {
     border-radius: 20px;
     border:2px dashed #ffffff;
     box-shadow: 0 0 0 8px rgba(144, 141, 166, 0.49);
+    margin-top: 20px;
 
 
 }
