/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,7 @@ header nav ul li a {
 
 }
 header nav ul li a:hover {
-    color: floralwhite;
+    color: #5d4c8f;
 }
 header nav ul li .active {
     color:
