--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ textarea {
 }
 header .container {
     padding: 15px 15px;
-    border-bottom: 1px solid #b3d4fc;
+
     background: url("http://www.customtoronto.ca/img/headbg.gif");
     border-radius: 20px;
     border:2px dashed #ffffff;
@@ -169,6 +169,7 @@ header nav ul li a {
 }
 header nav ul li a:hover {
     color: #5d4c8f;
+    box-shadow: ;
 }
 header nav ul li .active {
     color:
