/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,8 @@ header nav ul li a {
 
 }
 header nav ul li a:hover {
-        box-shadow: 0 0 0 10px rgba(155, 152, 177, 0.48);
+    box-shadow: 0 0 0 10px rgba(155, 152, 177, 0.48);
+    border-radius: 20px;
 }
 header nav ul li .active {
     color:
