--- a/css/main.css
+++ b/css/main.css
@@ -168,9 +168,9 @@ header nav ul li a {
 
 }
 header nav ul li a:hover {
-    border: 1px solid #ffffff;
+    border: 1px solid #808080;
     padding: 5px;
-    background-color: grey;
+    background-color: #808080;
 }
 header nav ul li .active {
     color:
