--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ header nav ul li a {
 header nav ul li a:hover {
     border: 1px solid #808080;
     padding: 8px;
-    background-color: rgba(230, 224, 255, 0.60);
+    background-color: rgb(255, 255, 255);
     border-radius: 3px;
 }
 header nav ul li .active {
