--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ header nav ul li a {
 header nav ul li a:hover {
     border: 1px solid #808080;
     padding: 8px;
-    background-color: rgb(244, 243, 255);
+    background-color: rgba(244, 243, 255, 0.9);
     border-radius: 3px;
 }
 header nav ul li .active {
