/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,7 @@ h1 {
     color: #fcfffa;
 }
 .icon-list-bullet {
-    color: black;
+    color: aliceblue;
 }
 section div ul li a{
     text-decoration: none;
