--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,7 @@ header nav ul li .active {
 section .container {
     margin-top: 20px;
     border-radius: 20px;
+    background: url("http://www.customtoronto.ca/img/greymenubg.gif")
 
 }
 h1 {
