--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,7 @@ header nav ul li {
 }
 header nav ul li a {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.38);
+    color: #fff;
 
 }
 header nav ul li a:hover {
