--- a/css/main.css
+++ b/css/main.css
@@ -178,7 +178,7 @@ header nav ul li .active {
 section .container {
     margin-top: 20px;
     border-radius: 20px;
-    background-color: #fff;
+    background-color: #f1f1f1;
 
 }
 h1 {
