--- a/css/main.css
+++ b/css/main.css
@@ -186,7 +186,7 @@ h1 {
     color: #555;
 }
 .icon-list-bullet {
-    color: aliceblue;
+    color: #555;
     font-size: 16px;
 }
 section div ul li a{
