--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@ section .container {
 h1 {
     font-size: 22px;
     color: #555;
-    font-family: cursive;
+    font-family: sans-serif;
 }
 .icon-list-bullet {
     color: #555;
