--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,9 @@ h1 {
     color: #555;
     font-size: 16px;
 }
+section div ul {
+    list-style: none;
+}
 section div ul li a{
     text-decoration: none;
     color: #555;
