--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ header .logo a {
     font-family: Arial, Helvetica sans-serif;
 }
 header .logo a:hover {
-    color: #000000;
+    font-size: 3em;
 }
 header  nav ul {
     padding: 15px;
