--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ header nav {
 header .logo a {
     text-decoration: none;
     color: #fcfffa;
-    text-shadow: -4px 4px 5px #000;
+    text-shadow: -4px 4px 5px #000, 3px 3px 5px blue;
     line-height: 2.4em;
     font-size: 2.4em;
     font-family: Arial, Helvetica sans-serif;
