--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,7 @@ header nav ul li a:hover {
     padding: 8px;
     background-color: rgba(225, 241, 255, 0.57);
     border-radius: 3px;
-    color: blue;
+    color: #0C2333;
 }
 header nav ul li .active {
 
