/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -158,15 +158,14 @@ header nav ul li {
 }
 header nav ul li a {
     text-decoration: none;
-
+    color: #fff;
 
 }
 header nav ul li a:hover {
     padding: 8px;
     background-color: rgba(225, 241, 255, 0.57);
     border-radius: 3px;
-    color: #0C2333;
-}
+
 header nav ul li .active {
 
 }
