--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,7 @@ header nav ul li a:hover {
     padding: 8px;
     background-color: rgba(225, 241, 255, 0.57);
     border-radius: 3px;
+    font-size: 12px;
 }
 header nav ul li .active {
 
