--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ section .container {
 h1 {
     font-size: 22px;
     color: #555;
-    font-family:  sans-serif;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 .icon-list-bullet {
     color: #555;
