--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,11 @@ header .logo a {
     font-size: 2.4em;
     font-family: Arial, Helvetica sans-serif;
 }
-
+header .logo a:hover {
+    text-shadow: 0 0 10px #fff;
+    font-size: 2.4em;
+    color: #ffffff;
+}
 header  nav ul {
     padding: 15px;
 
