--- a/css/main.css
+++ b/css/main.css
@@ -387,6 +387,9 @@ section div ul li a{
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
+    .container{
+        width: 100%;
+    }
     /* Styles */
 }
 
