--- a/css/main.css
+++ b/css/main.css
@@ -387,7 +387,7 @@ section div ul li a{
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
-    header. section{
+    .container{
         width: 100%;
     }
 
