--- a/css/main.css
+++ b/css/main.css
@@ -390,7 +390,9 @@ and (max-device-width : 480px) {
     .container{
         width: 100%;
     }
-
+                   header .logo a{
+                       color: red;
+                   }
     /* Styles */
 }
 
