--- a/css/main.css
+++ b/css/main.css
@@ -385,8 +385,8 @@ section div ul li a{
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
+and (min-width : 320px)
+and (max-width : 480px) {
     .container{
         width: 100%;
     }
