--- a/css/main.css
+++ b/css/main.css
@@ -363,7 +363,7 @@ section div ul li a{
     /* font-size: 120%; */
 
     /* Uncomment for 3D effect */
-    text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3);
+   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
 .icon-home:before { content: '\e809'; } /* '' */
