--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,7 @@ textarea {
      background-image: radial-gradient(circle farthest-corner at center, #3498DB 0%, #0C2333 100%);
  }
 .container {
-    width: 80%;
+    width: 980px;
     background: rgba(255,255,255,0.5);
     margin: 0 auto;
     overflow: hidden;
