/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -391,6 +391,9 @@ and (max-width : 480px) {
         width: 80%;
         font-size: 13px ;
     }
+        .wraper {
+            width: 80%;
+        }
 
     /* Styles */
 }
