--- a/css/main.css
+++ b/css/main.css
@@ -391,7 +391,7 @@ and (max-width : 480px) {
         width: 80%;
         font-size: 13px ;
     }
-        .wraper {
+        .wrapper {
             width: 80%;
         }
 
