--- a/css/main.css
+++ b/css/main.css
@@ -395,7 +395,7 @@ and (max-width : 480px) {
              display: block;
          }
          header .logo {
-             margin: 5px auto;
+             float: left;
          }
 
     /* Styles */
