--- a/css/main.css
+++ b/css/main.css
@@ -391,7 +391,7 @@ and (max-width : 480px) {
         width: 85%;
         font-size: 15px;
     }
-    header nav ul {
+    header nav {
         float: left;
     }
 
