--- a/css/main.css
+++ b/css/main.css
@@ -393,7 +393,7 @@ and (max-width : 480px) {
     }
     header nav {
         float: left;
-        display: block;
+        display: inline;
     }
 
 
