--- a/css/main.css
+++ b/css/main.css
@@ -392,7 +392,7 @@ and (max-width : 480px) {
         font-size: 15px;
     }
     header .logo {
-        position: absolute;
+        position: relative;
     }
 
 
