/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -391,7 +391,7 @@ and (max-width : 480px) {
         width: 85%;
         font-size: 14px;
     }
-       .logo {
+       header .logo {
            text-align: center;
        }
 
