--- a/css/main.css
+++ b/css/main.css
@@ -393,6 +393,7 @@ and (max-width : 480px) {
     }
        header .logo a {
            display: block;
+           text-align: center;
 
        }
 
