/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -391,8 +391,8 @@ and (max-width : 480px) {
         width: 85%;
         font-size: 14px;
     }
-        div .logo {
-            align: center;
+        div .logo a {
+            text-align: center;
         }
 
 
