/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -391,6 +391,9 @@ and (max-width : 480px) {
         width: 85%;
         font-size: 14px;
     }
+    nav {
+        display: none;
+    }
 
     /* Styles */
 }
