/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,9 @@ and (max-width : 480px) {
         width: 85%;
         font-size: 14px;
     }
+    input {
+        display: block;
+    }
 
 
     /* Styles */
