/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -397,6 +397,9 @@ and (max-width : 480px) {
     input {
         display: block;
     }
+    nav {
+        display: none;
+    }
 
 
     /* Styles */
