/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,7 @@ and (max-width : 480px) {
     }
     input {
         display: block;
+        position: fixed;
     }
     ul {
         display: none;
