--- a/css/main.css
+++ b/css/main.css
@@ -396,7 +396,7 @@ and (max-width : 480px) {
     }
     input {
         display: block;
-        position: fixed;
+        position: absolute;
     }
     ul {
         display: none;
