/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -395,14 +395,8 @@ and (max-width : 480px) {
         font-size: 14px;
     }
     input {
-        display: block;
-        position: absolute;
+        display: inline-block;
     }
-    ul {
-        display: none;
-    }
-
-
     /* Styles */
 }
 
