--- a/css/main.css
+++ b/css/main.css
@@ -396,7 +396,7 @@ and (max-width : 480px) {
     }
     input {
         display: inline-block;
-        margin: 20px auto;
+        margin-left: 50px;
     }
     /* Styles */
 }
