--- a/css/main.css
+++ b/css/main.css
@@ -392,6 +392,14 @@ and (max-width : 480px) {
         width: 85%;
         font-size: 14px;
     }
+    header .logo {
+        display: block;
+        width: auto;
+    }
+    header nav {
+        display: block;
+        width: auto;
+    }
         /* Styles */
 }
 
