--- a/css/main.css
+++ b/css/main.css
@@ -396,8 +396,8 @@ and (max-width : 480px) {
        margin-left: 80px;
     }
     header nav ul {
-        display: block;
-        width: auto;
+        margin-left: 50px;
+
     }
         /* Styles */
 }
