/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -401,6 +401,7 @@ and (max-width : 480px) {
     header nav ul li {
         display: block;
         margin: auto;
+        float: none;
     }
         /* Styles */
 }
