/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -397,6 +397,7 @@ and (max-width : 480px) {
     }
     header nav {
         background-color: #000000;
+        float: none;
     }
     header nav ul li {
         display: block;
