--- a/css/main.css
+++ b/css/main.css
@@ -400,6 +400,7 @@ and (max-width : 480px) {
     }
     header nav ul li {
         display: block;
+        text-align: center;
     }
         /* Styles */
 }
