--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,7 @@ and (max-width : 480px) {
      }
     header .logo {
        margin-left: 80px;
+        margin-bottom: 10px;
     }
     header nav {
        /* background-color: #000000; */
@@ -403,6 +404,7 @@ and (max-width : 480px) {
         display: block;
         text-align: center;
     }
+
         /* Styles */
 }
 
