/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -393,7 +393,8 @@ and (max-width : 480px) {
         font-size: 14px;
      }
     header .logo {
-       margin-left: 80px;
+       float: none;
+        margin: auto;
 
     }
     header nav {
