--- a/css/main.css
+++ b/css/main.css
@@ -394,7 +394,7 @@ and (max-width : 480px) {
      }
     header .logo {
        float: none;
-       margin: auto;
+       padding: auto;
      }
     header nav {
        /* background-color: #000000; */
