--- a/css/main.css
+++ b/css/main.css
@@ -393,6 +393,7 @@ and (max-width : 480px) {
         font-size: 14px;
      }
     header .logo {
+       display: block;
        margin-left: 80px;
      }
     header nav {
