/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -401,6 +401,7 @@ and (max-width : 480px) {
         margin: auto;
     }
     header nav ul li {
+        float: none;
         display: block;
         text-align: center;
     }
