/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -397,7 +397,7 @@ and (max-width : 480px) {
        display: block;
      }
     header .logo a {
-        margin: auto;
+        text-align: center;
     }
     header nav {
       float: none;
