/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -397,7 +397,7 @@ and (max-width : 480px) {
        display: block;
      }
     header .logo a:hover {
-        text-align: center;
+        margin-left: 80px;
      }
     header nav {
       float: none;
