/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -407,6 +407,9 @@ and (max-width : 480px) {
         display: block;
         text-align: center;
     }
+    .loader {
+        display: none;
+    }
 
         /* Styles */
 }
