--- a/css/main.css
+++ b/css/main.css
@@ -406,6 +406,7 @@ and (max-width : 480px) {
     header nav ul li {
         display: block;
         text-align: center;
+        margin-bottom: 15px;
     }
     .loader {
         display: none;
