--- a/css/main.css
+++ b/css/main.css
@@ -406,6 +406,8 @@ and (max-width : 480px) {
     header nav ul li {
         display: block;
         text-align: center;
+    }
+    header nav ul li a:hover {
         margin-bottom: 15px;
     }
     .loader {
