/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -406,7 +406,7 @@ and (max-width : 480px) {
     header nav ul li {
         display: block;
         text-align: center;
-        padding: 15px;
+        margin-bottom: 10px;
     }
     .loader {
         display: none;
