--- a/css/main.css
+++ b/css/main.css
@@ -395,6 +395,7 @@ and (max-width : 480px) {
     header .logo {
        float: none;
        display: block;
+        margin: 0 auto;
      }
     header nav {
       float: none;
