--- a/css/main.css
+++ b/css/main.css
@@ -395,7 +395,7 @@ and (max-width : 480px) {
     header .logo {
        float: none;
        display: block;
-        margin: 0 auto;
+        text-align: center;
      }
     header nav {
       float: none;
