--- a/css/main.css
+++ b/css/main.css
@@ -410,7 +410,8 @@ and (max-width : 480px) {
         display: none;
     }
     .wrapper {
-        width;
+        width: 140px;
+        height: 185px;
     }
 
         /* Styles */
