/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -391,7 +391,11 @@ and (max-width : 480px) {
     .container{
         width: 85%;
         font-size: 13px;
+
      }
+    header {
+        height: 80%;
+    }
     header .logo {
        float: none;
        display: block;
