--- a/css/main.css
+++ b/css/main.css
@@ -318,13 +318,13 @@ img {
     margin-bottom: 40px;
 }
 #product {
-    border-bottom: 1px dashed black;
+    border-bottom: 1px dashed #2c2c2c;
     height: 70%;
 
 }
 #name {
     height: 15%;
-    border-bottom: 1px dashed black;
+    border-bottom: 1px dashed #2c2c2c;
 }
 
 
