/ ‘.idea/workspace.xml’ / ‘css/main.css’ / ‘index.html’

--- a/css/main.css
+++ b/css/main.css
@@ -325,6 +325,11 @@ img {
 #name {
     height: 12%;
     border-bottom: 1px dashed #2c2c2c;
+    text-align: center;
+}
+#exparation-date {
+    text-align: center;
+    color: grey;
 }
 
 
