--- a/css/main.css
+++ b/css/main.css
@@ -326,6 +326,7 @@ img {
     height: 12%;
     border-bottom: 1px dashed #2c2c2c;
     text-align: center;
+    margin: auto;
 }
 #exparation-date {
     text-align: center;
