--- a/css/main.css
+++ b/css/main.css
@@ -320,7 +320,7 @@ img {
 #product {
     border-bottom: 1px dashed #2c2c2c;
     height: 73%;
-
+    font-family: Arial, Helvetica, sans-serif;
 }
 #name {
     height: 12%;
