--- a/css/main.css
+++ b/css/main.css
@@ -327,6 +327,7 @@ img {
     border-bottom: 1px dashed #2c2c2c;
     margin: 5px auto;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
 #exparation-date {
     text-align: center;
