--- a/css/main.css
+++ b/css/main.css
@@ -408,7 +408,7 @@ and (max-width : 480px) {
     }
     .wrapper {
         width: 70%;
-        height: 80%;
+        height: 320px;
     }
 
         /* Styles */
