--- a/css/main.css
+++ b/css/main.css
@@ -388,8 +388,8 @@ and (max-width : 480px) {
         width: 85%;
         font-size: 13px;
     }
-    header .container{
-        height: ;
+    header div .container{
+        height: 300px ;
     }
     header .logo {
        float: none;
