/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -416,6 +416,9 @@ and (max-width : 480px) {
         width: 70%;
         height: 300px;
     }
+    h1 {
+        font-size: 13px;
+    }
 
         /* Styles */
 }
