--- a/css/main.css
+++ b/css/main.css
@@ -416,7 +416,7 @@ and (max-width : 480px) {
         width: 70%;
         height: 300px;
     }
-    h1 {
+     {
         font-size: 13px;
     }
 
