/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -416,7 +416,8 @@ and (max-width : 480px) {
         width: 70%;
         height: 300px;
     }
-     {
+
+     section . container {
         font-size: 13px;
     }
 
