--- a/css/main.css
+++ b/css/main.css
@@ -417,7 +417,7 @@ and (max-width : 480px) {
         height: 300px;
     }
 
-     section .container {
+     section div .container {
         font-size: 13px;
     }
 
