--- a/css/main.css
+++ b/css/main.css
@@ -433,6 +433,41 @@ and (min-width : 321px) {
 /* Smartphones (portrait) ----------- */
 @media only screen
 and (max-width : 320px) {
+    .container{
+        width: 85%;
+        font-size: 13px;
+        height: 150px;
+    }
+    section .container {
+        height: 80px;
+    }
+    header .logo {
+        float: none;
+        display: block;
+        text-align: center;
+    }
+    header nav {
+        float: none;
+        display: block;
+    }
+    header nav ul {
+        padding: 0;
+    }
+    header nav ul li {
+        display: block;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    .loader {
+        display: none;
+    }
+    .wrapper {
+        width: 232px;
+        height: 300px;
+    }
+    h1 {
+        font-size: 18px;
+    }
     /* Styles */
 }
 
