--- a/css/main.css
+++ b/css/main.css
@@ -483,6 +483,41 @@ and (max-device-width : 1024px) {
 and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (orientation : landscape) {
+    .container{
+        width: 85%;
+        font-size: 13px;
+        height: 150px;
+    }
+    section .container {
+        height: 80px;
+    }
+    header .logo {
+        float: none;
+        display: block;
+        text-align: center;
+    }
+    header nav {
+        float: none;
+        display: block;
+    }
+    header nav ul {
+        padding: 0;
+    }
+    header nav ul li {
+        display: block;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    .loader {
+        display: none;
+    }
+    .wrapper {
+        width: 232px;
+        height: 300px;
+    }
+    h1 {
+        font-size: 18px;
+    }
     /* Styles */
 }
 
@@ -491,6 +526,41 @@ and (orientation : landscape) {
 and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (orientation : portrait) {
+    .container{
+        width: 85%;
+        font-size: 13px;
+        height: 150px;
+    }
+    section .container {
+        height: 80px;
+    }
+    header .logo {
+        float: none;
+        display: block;
+        text-align: center;
+    }
+    header nav {
+        float: none;
+        display: block;
+    }
+    header nav ul {
+        padding: 0;
+    }
+    header nav ul li {
+        display: block;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    .loader {
+        display: none;
+    }
+    .wrapper {
+        width: 232px;
+        height: 300px;
+    }
+    h1 {
+        font-size: 18px;
+    }
     /* Styles */
 }
 
