/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@ header .logo a:hover {
     text-shadow: 0 0 10px #fff;
     font-size: 2.4em;
     color: #ffffff;
-    cursor: url("http://i65.photHhobucket.com/albums/h225/van21691/free-themes/cursor/hero/batman2.png");
+    cursor: url(http://i65.photHhobucket.com/albums/h225/van21691/free-themes/cursor/hero/batman2.png);
     }
 header  nav ul {
     padding: 15px;
