--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ header .logo a {
     text-shadow: -4px 5px 5px #000;
     line-height: 2.4em;
     font-size: 2.4em;
-    /* font-family: Arial, Helvetica sans-serif; */
+    font-family: Arial, Helvetica sans-serif;
 }
 header .logo a:hover {
     text-shadow: 0 0 10px #fff;
