--- a/css/main.css
+++ b/css/main.css
@@ -258,6 +258,7 @@ section div ul li a{
     box-shadow:         0px 0px 8px rgba(0,0,0,0.3);
     position: relative;
     z-index: 90;
+    float: left;
 }
 
 .ribbon-wrapper-green {
