/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -259,6 +259,7 @@ section div ul li a{
     position: relative;
     z-index: 90;
     float: left;
+    margin-left: 20px;
 }
 
 .ribbon-wrapper-green {
