--- a/css/main.css
+++ b/css/main.css
@@ -259,6 +259,19 @@ section div ul li a{
     position: relative;
     z-index: 90;
 }
+.wrapper2 {
+    margin: 50px auto;
+    width: 280px;
+    height: 370px;
+    background: white;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
+    -moz-box-shadow:    0px 0px 8px rgba(0,0,0,0.3);
+    box-shadow:         0px 0px 8px rgba(0,0,0,0.3);
+    position: relative;
+    z-index: 90;
+}
+
 
 .ribbon-wrapper-green {
     width: 85px;
