--- a/css/main.css
+++ b/css/main.css
@@ -260,7 +260,6 @@ section div ul li a{
     z-index: 90;
 }
 .wrapper2 {
-    margin: 50px auto;
     width: 280px;
     height: 370px;
     background: white;
@@ -270,6 +269,7 @@ section div ul li a{
     box-shadow:         0px 0px 8px rgba(0,0,0,0.3);
     position: relative;
     z-index: 90;
+    float: left;
 }
 
 
