--- a/css/main.css
+++ b/css/main.css
@@ -272,7 +272,9 @@ section div ul li a{
     float: left;
     margin-left: 50px;
 }
-
+ section .wrapper2 {
+     margin: 50px auto;
+ }
 
 .ribbon-wrapper-green {
     width: 85px;
