/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -273,7 +273,7 @@ section div ul li a{
     margin-left: 50px;
 }
  section .wrapper2 {
-     margin: 50px auto;
+     margin: 50px 50px;
  }
 
 .ribbon-wrapper-green {
