/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,9 @@ section div ul li a{
     float: left;
     margin-left: 50px;
 }
+.products {
+    margin-top: 20px auto;
+}
 .ribbon-wrapper-green {
     width: 85px;
     height: 88px;
