--- a/css/main.css
+++ b/css/main.css
@@ -275,6 +275,7 @@ section div ul li a{
 .products {
     height: 700px;
     width: 80%;
+    margin-top: 50px;
 }
 .ribbon-wrapper-green {
     width: 85px;
