--- a/css/main.css
+++ b/css/main.css
@@ -275,7 +275,7 @@ section div ul li a{
 .products {
     height: 700px;
     width: 80%;
-    margin-top: 50px;
+    margin: 0 auto;
 }
 .ribbon-wrapper-green {
     width: 85px;
