--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,7 @@ section div ul li a{
     z-index: 90;
     float: left;
     margin-top: 20px;
+    margin-right: 10px;
 }
 .products {
     height: 700px;
