--- a/css/main.css
+++ b/css/main.css
@@ -276,7 +276,7 @@ section div ul li a{
 .products {
     height: 700px;
     width: 90%;
-
+    padding: 0 auto;
 }
 .ribbon-wrapper-green {
     width: 85px;
