--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,7 @@ section div ul li a{
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
     -moz-box-shadow:    0px 0px 8px rgba(0,0,0,0.3);
-    box-shadow:         0px 0px 8px rgba(0,0,0,0.3);
+    /* box-shadow:         0px 0px 8px rgba(0,0,0,0.3); */
     position: relative;
     z-index: 90;
     float: left;
