--- a/css/main.css
+++ b/css/main.css
@@ -268,10 +268,9 @@ section div ul li a{
     -moz-box-shadow:    0px 0px 8px rgba(0,0,0,0.3);
     box-shadow:         0px 0px 8px rgba(0,0,0,0.3);
     position: relative;
-   z-index: 90;
+    z-index: 90;
     display: inline-block;
-
-
+    margin-top: 50px;
 }
 .products {
     height: 700px;
