/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,7 @@ section .list {
     margin-top: 20px;
     border-radius: 10px;
     background-color: #f1f1f1;
-    box-shadow: 10px 10px 5px #888888;
+    box-shadow: 10px 10px 5px #723e45;
 }
 
 .ribbon-green {
