--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,7 @@ section .list {
     margin-top: 20px;
     border-radius: 10px;
     background-color: #f1f1f1;
-    box-shadow: 8px 8px 5px rgba(51, 17, 13, 0.78);
+    box-shadow: 8px 8px 5px rgba(0,0,0,0.6);
 }
 
 .ribbon-green {
