--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,7 @@ section .list {
     margin-top: 20px;
     border-radius: 10px;
     background-color: #f1f1f1;
-    box-shadow: 8px 8px 4px rgba(93, 93, 93, 0.9);
+    box-shadow: 8px 8px rgba(93, 93, 93, 0.9);
 }
 
 .ribbon-green {
