--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,7 @@ form header {
 }
 form header p {
     color: #ffffff;
-    font-family: "Helvetica Neue Light", Verdana,  sans-serif;
+    font-family:  Verdana,  sans;
 }
 
 .ribbon-green {
