--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,7 @@ form header {
 }
 form header p {
     color: #ffffff;
-    font-family: CURSIVE;
+    font-family: CURSIVE, "Lucida Grande";
 }
 
 .ribbon-green {
