/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -305,6 +305,7 @@ form header p {
     color: #ffffff;
     font-family: Verdana;
     padding-left: 10px;
+    display: center;
 }
 
 .ribbon-green {
