--- a/css/main.css
+++ b/css/main.css
@@ -305,7 +305,7 @@ form header p {
     color: #ffffff;
     font-family: Verdana;
     padding-left: 10px;
-    display: center;
+    margin: 0 auto;
 }
 
 .ribbon-green {
