--- a/css/main.css
+++ b/css/main.css
@@ -306,7 +306,7 @@ form header p {
     font-family: Verdana;
     padding-left: 15px;
     line-height: 1em;
-    font-size: 1.2em;
+    font-size: 24px;
 
 }
 
