--- a/css/main.css
+++ b/css/main.css
@@ -312,6 +312,14 @@ form div {
     display: block;
 
 }
+* {
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+    text-decoration: none;
+    text-align: left;
+}
+
 
 .ribbon-green {
     font: bold 15px Sans-Serif;
