/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -285,7 +285,7 @@ section div ul li a{
     top: -3px;
     right: -3px;
 }
-form {
+#list {
     width: 480px;
     height: 340px;
     margin: 0 auto;
@@ -308,6 +308,7 @@ form header p {
     padding-left: 15px;
     font-size: 18px;
 }
+
 
 
 .ribbon-green {
