--- a/css/main.css
+++ b/css/main.css
@@ -288,9 +288,8 @@ section div ul li a{
 #list {
     width: 480px;
     height: 340px;
-    z-index
+    z-index: 2;
     margin: 0 auto;
-    overflow: hidden;
     margin-top: 20px;
     border-radius: 10px;
     background-color: #f1f1f1;
