--- a/css/main.css
+++ b/css/main.css
@@ -289,6 +289,7 @@ section div ul li a{
     width: 480px;
     height: 340px;
     z-index: 2;
+    overflow: hidden;
     margin: 0 auto;
     margin-top: 20px;
     border-radius: 10px;
