/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,7 @@ section div ul li a{
     line-height: 0em;
 
 }
-form header p {
+#list header p {
     color: #ffffff;
     font-family: Verdana;
     padding-left: 15px;
