--- a/css/main.css
+++ b/css/main.css
@@ -295,6 +295,7 @@ section div ul li a{
     border-radius: 10px;
     background-color: #f1f1f1;
     box-shadow: 6px 6px 2px rgba(141, 131, 122, 0.64);
+    position: relative;
 }
 #list header {
     height: 38px;
