--- a/css/main.css
+++ b/css/main.css
@@ -296,6 +296,8 @@ section div ul li a{
     background-color: #f1f1f1;
     box-shadow: 6px 6px 2px rgba(141, 131, 122, 0.64);
     position: relative;
+    display: block;
+    text-align: left;
 }
 #list header {
     height: 38px;
