--- a/css/main.css
+++ b/css/main.css
@@ -312,9 +312,15 @@ section div ul li a{
     padding-left: 15px;
     font-size: 18px;
 }
+form {
+    text-align: left;
+    padding-left: 15px;
+    font-size: 21px;
+}
 label {
     display: block;
     color: #718090;
+
 }
 #list-name {
     display: block;
