--- a/css/main.css
+++ b/css/main.css
@@ -293,7 +293,7 @@ section div ul li a{
     margin: 0 auto;
     margin-top: 20px;
     border-radius: 10px;
-    background-color: #f1f1f1;
+    background-color: #F9FAFB;
     box-shadow: 6px 6px 2px rgba(141, 131, 122, 0.64);
     position: relative;
     display: block;
