/ ‘.idea/workspace.xml’ / ‘css/main.css’

--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,8 @@ label {
 #list-name {
     display: block;
     width: 95%;
-    /*border-radius: 5px;*/
+    border-radius: 5px;
+    border: solid #000000;
 }
 #description {
     display: block;
