--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@ label {
     border-radius: 5px;
 }
 textarea {
-    border: 1px solid #000000 ;
+    border: 1px solid rgba(0,0,0, 0,5) ;
 }
 
 
